2004-08-14  Jim Evins  <evins@snaught.com>

	* configure.in:
		Updated version to 2.1cvs.
	
2004-08-14  Jim Evins  <evins@snaught.com>

	* po/ja.po:
		Updated 2.0.x translation by Takeshi AIHANA <aihana@gnome.gr.jp>.

2004-08-14  Jim Evins  <evins@snaught.com>

	Fixes for Bug #1008181.

	* src/bc.c: (gl_barcode_default_digits):
		Make a format of zero digits, harmless.
	* src/xml-label.c: (xml_parse_object_barcode):
		Set default value of the format property of barcode objects to 10, not
		zero.  This will prevent crashes when reading pre 2.0.x files.

2004-08-09  Jim Evins  <evins@snaught.com>

	* NEWS:
	* TODO:
	* help/C/glabels-C.omf:
	* help/C/glabels.xml:
		Brought documentation up-to-date for 2.0.0 release.
	
2004-08-09  Jim Evins  <evins@snaught.com>

	These are hopefully the final preparations for 2.0.0.

	* data/mime/Makefile.am:
		Include glabels.xml in EXTRA_DIST.
	* configure.in:
		- Updated comment style.
		- Added LIBGLABELS_VERSION_INFO macro, updated Current.
		- Added package and version info to configuration printout
		- Update version to 2.0.0
	* libglabels/Makefile.am:
		Use the new LIBGLABELS_VERSION_INFO macro.

2004-08-09  Jim Evins  <evins@snaught.com>

	* configure.in:
	* glabels.spec.in:
		Cleanup of required library macros.

2004-08-08  Jim Evins  <evins@snaught.com>

	* glabels.spec.in:
		- Updated URL
		- More specific of what to install in /usr/bin and /usr/lib
		- Remove built mime registration files from staging directory

2004-08-08  Jim Evins  <evins@snaught.com>

	* data/mime/Makefile.am:
		Fixed typo:  key_files should have been keys_files.

2004-08-08  Jim Evins  <evins@snaught.com>

	Reorganization of runtime data files.  Also added registration of mimetype with
	new freedesktop.org mime database if available.
	
	* data/*
		Moved files to appropriate subdirectories, creating local Makefile.am
		in each subdirectory.
		- Moved paper-sizes.xml and *-templates.xml to templates subdirectory.